# bsw-test

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
configs/: bet-maker.env.example  db.env.example  line-provider.env.example  pgadmin.env.example
dockerfiles/: bet-maker.dockerfile  line-provider.dockerfile
microservices/bet-maker/: alembic.ini  pyproject.toml  run.py
microservices/bet-maker/app/: models.py  routes.py  services.py
microservices/bet-maker/app/serializers/: bets.py  events.py
microservices/bet-maker/app/views/: __init__.py  bets.py  events.py
microservices/bet-maker/migrations/: env.py
microservices/bet-maker/migrations/versions/: 20220710_18:11_44a44934109a_create_basic_functions_and_extensions.py  20220710_18:14_e757c42a7f09_create_table_bets.py
microservices/line-provider/: pyproject.toml  run.py
microservices/line-provider/app/: __init__.py  models.py  routes.py  serializers.py  services.py  utils.py  views.py
microservices/line-provider/migrations/versions/: 20220710_13:58_3a285d9ec7d6_create_basic_functions_and_extensions.py  20220710_14:03_b8b5d50c680c_create_table_events.py
microservices/settings/: __init__.py  base.py  responses.py  serializers.py
microservices/settings/databases/: __init__.py  functions.py  models.py  triggers.py
