[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Daniil Takhtarov <dtahtarov@marketing-logic.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
databases = "^0.6.0"
loguru = "^0.6.0"
aioredis = "^2.0.1"
ujson = "^5.4.0"
alembic = "^1.8.0"
uvicorn = "^0.18.2"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
